# evo_api_mocker

evo/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
evo/src/: App.css  App.vue  i18n.ts  main.ts
evo/src-tauri/: Cargo.toml  tauri.conf.json
evo/src-tauri/icons/: icon.icns
evo/src-tauri/src/: lib.rs  server.rs
evo/src/components/: ConfirmModal.vue  DatabaseView.vue  HelpView.vue  LogsView.vue  MocksView.vue  SettingsView.vue  ToastContainer.vue
evo/src/composables/: useConfirm.ts  useLogs.ts  useServer.ts  useToast.ts
evo/src/locales/: en.json  ja.json  zh.json
